--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+<html lang="en" class="light-style customizer-hide" dir="ltr" data-theme="theme-default"
+  data-assets-path="%PUBLIC_URL%/template/assets/" data-template="vertical-menu-template-free">
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,49 +23,53 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- Template stylesheets -->
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Icons. Uncomment required icon fonts -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/fonts/boxicons.css" />
-    <!-- Core CSS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/css/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/css/demo.css" />
-    <!-- Vendors CSS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/libs/apex-charts/apex-charts.css" />
-    <!-- End template stylesheets -->
-    <title>Tableau de bord - Marketplace</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- React root component -->
-    <div id="root"></div>
-    <!-- JS scripts -->
-    <!-- Helpers -->
-    <script src="%PUBLIC_URL%/template/assets/vendor/js/helpers.js"></script>
-    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="%PUBLIC_URL%/template/assets/js/config.js"></script>
-    <!-- build:js assets/vendor/js/core.js -->
-    <script src="%PUBLIC_URL%/template/assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="%PUBLIC_URL%/template/assets/vendor/libs/popper/popper.js"></script>
-    <script src="%PUBLIC_URL%/template/assets/vendor/js/bootstrap.js"></script>
-    <script src="%PUBLIC_URL%/template/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="%PUBLIC_URL%/template/assets/vendor/js/menu.js"></script>
-    <!-- Vendors JS -->
-    <script src="%PUBLIC_URL%/template/assets/vendor/libs/apex-charts/apexcharts.js"></script>
-    <!-- Main JS -->
-    <script src="%PUBLIC_URL%/template/assets/js/main.js"></script>
-    <!-- Page JS -->
-    <script src="%PUBLIC_URL%/template/assets/js/dashboards-analytics.js"></script>
-    <!-- Place this tag in your head or just before your close body tag. -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-  </body>
+  <!-- Template stylesheets -->
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet" />
+  <!-- Icons. Uncomment required icon fonts -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/fonts/boxicons.css" />
+  <!-- Core CSS -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/css/core.css" class="template-customizer-core-css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/css/theme-default.css"
+    class="template-customizer-theme-css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/css/demo.css" />
+  <!-- Vendors CSS -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/libs/apex-charts/apex-charts.css" />
+  <!-- LoginView CSS -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/css/pages/page-auth.css" />
+  <!-- End template stylesheets -->
+  <title>Tableau de bord - Marketplace</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- React root component -->
+  <div id="root"></div>
+  <!-- JS scripts -->
+  <!-- Helpers -->
+  <script src="%PUBLIC_URL%/template/assets/vendor/js/helpers.js"></script>
+  <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
+  <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
+  <script src="%PUBLIC_URL%/template/assets/js/config.js"></script>
+  <!-- build:js assets/vendor/js/core.js -->
+  <script src="%PUBLIC_URL%/template/assets/vendor/libs/jquery/jquery.js"></script>
+  <script src="%PUBLIC_URL%/template/assets/vendor/libs/popper/popper.js"></script>
+  <script src="%PUBLIC_URL%/template/assets/vendor/js/bootstrap.js"></script>
+  <script src="%PUBLIC_URL%/template/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+  <script src="%PUBLIC_URL%/template/assets/vendor/js/menu.js"></script>
+  <!-- Vendors JS -->
+  <script src="%PUBLIC_URL%/template/assets/vendor/libs/apex-charts/apexcharts.js"></script>
+  <!-- Main JS -->
+  <script src="%PUBLIC_URL%/template/assets/js/main.js"></script>
+  <!-- Page JS -->
+  <script src="%PUBLIC_URL%/template/assets/js/dashboards-analytics.js"></script>
+  <!-- Place this tag in your head or just before your close body tag. -->
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
+</body>
+
 </html>
