Implement Logout methog

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,10 @@
   <!-- Vendors CSS -->
   <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/libs/apex-charts/apex-charts.css" />
-  <!-- LoginView CSS -->
+  <!-- Pages CSS -->
   <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/css/pages/page-auth.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/template/assets/vendor/css/pages/page-misc.css" />
+
   <!-- End template stylesheets -->
   <title>Tableau de bord - Marketplace</title>
 </head>
