--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,8 @@
   <script src="%PUBLIC_URL%/template/assets/js/main.js"></script>
   <!-- Page JS -->
   <script src="%PUBLIC_URL%/template/assets/js/dashboards-analytics.js"></script>
+  <script src="%PUBLIC_URL%/template/assets/js/ui-toasts.js"></script>
+
   <!-- Place this tag in your head or just before your close body tag. -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
